--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_TEMPLATE_CLIENT_ID =
+NEXT_PUBLIC_TEMPLATE_CLIENT_ID =d6a7ed7c004eb6b2c724cefc7eb876a2
 NEXT_PUBLIC_TEMPLATE_LINE_LIFF = 
