--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.62.0",
     "@line/liff": "^2.25.1",
-    "next": "14.1.0",
+    "next": "^14.2.32",
     "react": "^18.3",
     "react-dom": "^18.3",
     "thirdweb": "^5"
