--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.62.0",
     "@line/liff": "^2.25.1",
+    "@pixiv/three-vrm": "^3.4.2",
+    "@types/three": "^0.180.0",
     "next": "^14.2.32",
     "react": "^18.3",
     "react-dom": "^18.3",
-    "thirdweb": "^5"
+    "thirdweb": "^5",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/node": "^20",
