--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@line/liff": "^2.25.1",
     "@pixiv/three-vrm": "^3.4.2",
     "@types/three": "^0.180.0",
+    "ethereum-blockies": "^0.1.1",
     "next": "^14.2.32",
     "react": "^18.3",
     "react-dom": "^18.3",
